name:                volume
version:             0.1.0.0
synopsis:            Discoverable Voice Painting
description:         See Readme
homepage:            http://github.com/cabbibo/volume
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini / Isaac Cohen
maintainer:          who@tree.is
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

Flag UseOculusSDK
  Description: Enable direct Oculus SDK support (rather than via SteamVR)
  Default:     False


executable volume
  hs-source-dirs:      app
  main-is:             Volume.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vr-pal
                     , glfw-pal
                     , gl-pal
                     , gl
                     , linear-extra
                     , mtl
                     , lens-extra
                     , halive
                     , random
                     , containers
                     , MonadRandom
                     , time
                     , lens
                     , linear
                     , split

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/cabbibo/volume
